--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           ./mvnw clean verify sonar:sonar \
             -Dsonar.projectKey=Java_PR_Automation \
-            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.host.url=http://192.168.1.8:9000 \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
