Set execute permissions for mvnw

--- a/pom.xml
+++ b/pom.xml
@@ -32,4 +32,15 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- Other plugins -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>4.0.0.4121</version> <!-- Ensure this matches the version you are using -->
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
