--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Set execute permissions for mvnw
         run: chmod +x mvnw
 
-      - name: Build and analyze
+      - name: Build and analyze with SonarQube
         run: |
           ./mvnw clean verify sonar:sonar \
             -Dsonar.projectKey=Java_PR_Automation \
-            -Dsonar.host.url=http://127.0.0.1:9000 \
+            -Dsonar.host.url=http://localhost:9000 \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
